[gd_scene load_steps=7 format=3 uid="uid://wyls5budn4jc"]

[ext_resource type="Script" path="res://scenes/slasher/slasher.gd" id="1_65sln"]
[ext_resource type="Texture2D" uid="uid://co1q7pjkx3jhk" path="res://assets/character/Astor/lobizon_new.png" id="2_t38px"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="4_rgmfx"]
[ext_resource type="Texture2D" uid="uid://dae2ndr6yaktq" path="res://assets/light.png" id="5_ij11k"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_buwoe"]
height = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_llkhl"]
radius = 23.1948

[node name="Slasher" type="CharacterBody2D" groups=["minimap_object"]]
z_index = 10
collision_layer = 2
collision_mask = 29
wall_min_slide_angle = 0.0
script = ExtResource("1_65sln")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_t38px")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_buwoe")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
debug_enabled = true
debug_path_custom_color = Color(0.997686, 0.129967, 0.999998, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_llkhl")
debug_color = Color(0.977928, 0, 0.400255, 0.42)

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_rgmfx")

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(0, -11)
color = Color(1, 0.47, 0.47, 0.615686)
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 0.5
texture = ExtResource("5_ij11k")

[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
